# cpp-pares

./: Makefile  README.md  metadata.tex
01-intro/: Makefile.def  content.tex  simple.tex  vision.tex
02-patrones/: Makefile.def  Makefile.mk  bucles.tex  content.tex  intro.tex  invoke.tex  main.tex  parallel-for.tex  parallel-reduce.tex  parallel-scan.tex  slides.tex
examples/01-intro/avg/: CMakeLists.txt  main.cpp  seq.hpp  stl.hpp  stl_par.hpp  tbb.hpp  tbbstl.hpp
examples/02-patrones/matmult/: CMakeLists.txt  main.cpp  matrix.cpp  matrix.hpp
examples/02-patrones/maxvalue/: CMakeLists.txt  main.cpp
examples/02-patrones/partasks/: .gitignore  CMakeLists.txt  main.cpp
examples/02-patrones/pi/: CMakeLists.txt  main.cpp
examples/02-patrones/prefix_sum/: CMakeLists.txt  main.cpp
guide/: Makefile.def  ack.tex  foreword.tex  titlepage.tex
